fix jumpscare and containers

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -65,7 +65,10 @@ body {
 	display: grid;
 	gap: 7.5px;
 	width: 90%;
-	grid-template-columns: repeat(auto-fill, minmax(150px, max-content));
+	grid-template-columns: repeat(auto-fit, minmax(150px, max-content));
+	justify-items: center;
+	place-items: center;
+	align-items: center;
 	justify-content: center;
 }
 .card {
@@ -192,23 +195,23 @@ option {
 }
 
 .surprise {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    overflow: hidden;
-    z-index: 9999;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: transparent;
+	overflow: hidden;
+	z-index: 9999;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .surprisemf {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    border-radius: 4px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+	border-radius: 4px;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
